[package]
name = "assemblyline-banners"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Serialization framework
serde = { version = "1.0", features = ["derive", "std"] }
serde-value = "*"
serde_json = "1.0"
serde_yaml = { version = "0.9" }

# Utilities
# lazy_static = "1.4"
itertools = "0.11"

# move to test deps
tempfile = "*"