[package]
name = "assemblyline-client"
version = "0.1.12"
edition = "2021"
license = "MIT"
repository = "https://github.com/cybercentreCanada/assemblyline-rust"
homepage = "https://www.cyber.gc.ca/en/tools-services/assemblyline"
description = """A client for the Assemblyline malware analysis platform."""

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "multipart", "stream", "gzip", "brotli", "deflate", "rustls-tls-native-roots"] }
rustls = { version = "0.21.7", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"

serde = { version = "1.0", features = ["derive", "std"] }
serde_with = "3.3"
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-recursion = { version = "1" }

base64 = "0.21"
url = "2"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

assemblyline-models = { version="0.3" }

# Libraryies used for the ingest binary
clap = { version = "4.5", features = ["derive"] }
configparser = "3"
expanduser = "1.2"
rand = "0.9"
sha2 = "0.10"
env_logger = "0.10"

[dev-dependencies]
assemblyline-markings = { version="0.1.10" }
