[package]
name = "assemblyline-filestore"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cybercentreCanada/assemblyline-rust"
homepage = "https://www.cyber.gc.ca/en/tools-services/assemblyline"
description = """A blob storage layer for the Assemblyline malware analysis platform."""

[dependencies]
# framework
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# System utilities
async-trait = "0.1"
bytes = "1.9"
safe-path = "0.1"
log = "0.4"
url = "2.5"

# Encoding tools
percent-encoding = "2.3"
# base64 = "0.22"

# Error handling utilities
anyhow = "1.0"
thiserror = "2.0"

# Azure cloud service libraries
azure_core = { version = "0.21", features = ["tokio-fs"]}
azure_identity = "0.21"
azure_storage = "0.21"
azure_storage_blobs = "0.21"

# Amazon cloud service libraries
aws-config = "1.8"
aws-sdk-s3 = "1.101"
aws-types = "1.3"
aws-smithy-http-client = { version = "1.0", features = [ "rustls-ring", "hyper-014" ] }

# Http client used internally to AWS, version must match one used by above crates
legacy-hyper-rustls = { package = "hyper-rustls", version = "0.24", features = ["http2", "rustls-native-certs"] }
legacy-rustls = { package = "rustls", version = "0.21.8" }

[dev-dependencies]
tempfile = "3.15"
env_logger = "0.11"