[package]
name = "assemblyline-markings"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]

# Serialization framework
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
serde_yaml = { version = "0.9" }

# Utilities
itertools = "0.11"

[dev-dependencies]
tempfile = "*"