[package]
name = "assemblyline-markings"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/cybercentreCanada/assemblyline-rust"
homepage = "https://www.cyber.gc.ca/en/tools-services/assemblyline"
description = """Library for using access control strings with the Assemblyline malware analysis platform."""

[dependencies]

# Serialization framework
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
serde_yaml = { version = "0.9" }

# Utilities
itertools = "0.11"

[dev-dependencies]
tempfile = "3"