[package]
name = "assemblyline-models"
version = "0.1.21"
edition = "2021"
license = "MIT"
repository = "https://github.com/cybercentreCanada/assemblyline-rust"
homepage = "https://www.cyber.gc.ca/en/tools-services/assemblyline"
description = """Data models for the Assemblyline malware analysis platform."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "std"] }
serde_with = "3.3"
serde_json = "1.0"
base62 = "2.0"

strum = { version = "0.25", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
struct-metadata = { version = "0.1", features = ["serde_json"] }

assemblyline-markings = { version = "0.1.5" }

rand = { version = "0.8", optional = true }

[dev-dependencies]
pretty_assertions = { version= "1.4" }

[features]
default = ["rand"]