[package]
name = "assemblyline-search"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/cybercentreCanada/assemblyline-rust"
homepage = "https://www.cyber.gc.ca/en/tools-services/assemblyline"
description = """Library components for analytical components within assemblyline."""



[dependencies]
nom = "8"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
itertools = "*"
serde = { version = "1.0", features = ["derive", "rc"] }
assemblyline-models = "*"
log = "*"
struct-metadata = "*"
yb-tokio-postgres = "0.7.10-yb-1-beta.3"
tokio = { version = "1", features = ["full"] }


clap = { version = "4.6", features = ["derive"] }
