[package]
name = "assemblyline-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
log = "*"
flexi_logger = { version = "0.28", features=["syslog_writer"] }
gethostname = "0.4"
local-ip-address = "0.6"

# Utilities
chrono = "*"
tempfile = "*"
rand = "*"
itertools = "*"
anyhow = "*"
thiserror = "*"
bytes = "*"
parking_lot = { version = "0.12", features = [] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
environment_template = "0.1"
clap = { version = "4.5", features = ["derive"] }
hex = "*"
uuid = "1.10"
async-trait = "0.1"
safe-path = "0.1"
urlencoding = "2.1"

zip = "2.2"
cart_container = "1.0"

yara = { version = "0.28", features = ["serde", "vendored"] }
magic = "0.16"

# Core framework
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "*"

# Network libraries
reqwest = { version = "0.12", features = ["json", "native-tls"] }
poem = { version = "1.3", features = ["websocket", "openssl-tls", "anyhow", "multipart"] }
url = "*"
tokio-tungstenite = "0.20"
http = "*"

# Crypto/hash libraries
digest = "*"
openssl = { version = "0.10" }
native-tls = "0.2"
hyper-rustls = { version = "0.23", features = [] }
rustls = "0.20"
sha1 = "*"
sha2 = "*"
md-5 = "*"
tlsh2 = "*"
# ssdeep = "0.6"
ffuzzy = "0.3"

# Database tools
# elasticsearch = "8.5.0-alpha.1"
redis-objects = { version = "*", path = "../redis-objects" }

# Data managing
assemblyline-markings = { version = "0.1.8", path = "../assemblyline-markings" }
assemblyline-models = { version = "0.2", path = "../assemblyline-models", features = ["rand"] }
struct-metadata = "1.0"
serde = { version = "*", features = ["derive", "rc"] }
serde_json = "*"
serde_yaml = "*"
serde_with = "*"

# data parsing
nom = "*"
regex = "*"

[dependencies.magic-sys]
version = "0.3"
default-features = false
features = ["v5-40"]

[dev-dependencies]

env_logger = "*"