[package]
name = "assemblyline-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging
log = "0.4"
flexi_logger = { version = "0.29", features=["syslog_writer"] }
gethostname = "1.0"
local-ip-address = "0.6"

# Utilities
chrono = "0.4"
tempfile = "3.19"
rand = "0.9"
itertools = "*"
anyhow = "*"
thiserror = "*"
bytes = "*"
parking_lot = { version = "0.12", features = [] }
strum = { version = "0.27", features = ["derive"] }
# strum_macros = "0.27"
environment_template = "0.1"
clap = { version = "4.5", features = ["derive"] }
hex = "*"
uuid = "1.10"
urlencoding = "2.1"

zip = "2.2"
cart_container = "1.0"

yara = { version = "0.30", features = ["serde", "vendored"] }
magic = "0.16"

# Core framework
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Network libraries
reqwest = { version = "0.12", features = ["json", "native-tls"] }
poem = { version = "3.1", features = ["websocket", "openssl-tls", "anyhow", "multipart"] }
url = "*"
tokio-tungstenite = "0.20"
# http = "*"

# Crypto/hash libraries
digest = "*"
openssl = { version = "0.10" }
# native-tls = "0.2"
# hyper-rustls = { version = "0.23", features = [] }
# rustls = "0.20"
sha1 = "*"
sha2 = "*"
md-5 = "*"
tlsh2 = "*"
# ssdeep = "0.6"
ffuzzy = "0.3"

# Database tools
# elasticsearch = "8.5.0-alpha.1"
redis-objects = { version = "*", path = "../redis-objects" }

# Data managing
assemblyline-markings = { version = "0.1.10", path = "../assemblyline-markings" }
assemblyline-filestore = { version = "0.1", path = "../assemblyline-filestore" }
assemblyline-models = { version = "0.3", path = "../assemblyline-models", features = ["rand"] }
struct-metadata = { version = "1.3", features = ["serde_json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "3.12"

# data parsing
nom = "8"
regex = "*"

[dependencies.pyo3]
version = "0.24.0"
features = ["auto-initialize"]

[dependencies.magic-sys]
version = "0.3"
# default-features = false
# features = ["v5-44"]

[dev-dependencies]

env_logger = "*"
