[package]
name = "assemblyline-server"
version = "0.2.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/cybercentreCanada/assemblyline-rust"
homepage = "https://www.cyber.gc.ca/en/tools-services/assemblyline"
description = """Server package for the Assemblyline malware analysis platform."""

[dependencies]
# Logging
log = "0.4"
flexi_logger = { version = "0.31", features=["syslog_writer"] }
gethostname = "1.0"
local-ip-address = "0.6"

# Utilities
chrono = "0.4"
tempfile = "3.19"
rand = "0.9"
itertools = "0.14"
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.10"
parking_lot = { version = "0.12", features = [] }
strum = { version = "0.27", features = ["derive"] }
# strum_macros = "0.27"
environment_template = "0.1"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
uuid = "1.10"
urlencoding = "2.1"

zip = "4.3"
cart_container = "1.0"

yara = { version = "0.30", features = ["serde", "vendored"] }
magic = "0.16.2"
csv-scout = "0.0.9"
magika = { version = "0.2.1", features = ["serde"] }
ort = {version = "=2.0.0-rc.10", features = ["download-binaries"]}

# Core framework
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Network libraries
reqwest = { version = "0.12", features = ["json", "native-tls"] }
poem = { version = "3.1", features = ["websocket", "openssl-tls", "anyhow", "multipart"] }
url = "2.5"
# tokio-tungstenite = "0.26"

# Crypto/hash libraries
digest = "0.10"
openssl = { version = "0.10" }
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
tlsh2 = "0.4"
# ssdeep = "0.6"
ffuzzy = "0.3"

# Database tools
redis-objects = { version = "1", path = "../redis-objects" }

# Data managing
assemblyline-markings = { version = "0.1.13", path = "../assemblyline-markings" }
assemblyline-filestore = { version = "0.1", path = "../assemblyline-filestore" }
assemblyline-models = { version = "0.5", path = "../assemblyline-models", features = ["rand"] }
struct-metadata = { version = "1.3", features = ["serde_json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "3.12"

# data parsing
nom = "8"
regex = "1.11"

[dependencies.pyo3]
version = "0.25.1"
features = ["auto-initialize"]

[dependencies.magic-sys]
version = "0.3"
# default-features = false
# features = ["v5-44"]

[dev-dependencies]
env_logger = "0"
