[package]
name = "redis-objects"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cybercentreCanada/assemblyline-rust"
homepage = "https://www.cyber.gc.ca/en/tools-services/assemblyline"
description = """Object oriented wrapper around redis client."""

[dependencies]
# Async Runtime 
tokio = { version = "1", features = ["full"] }
futures = "*"

# Serialization
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"

# General system utilities
log = "0.4"
chrono = "0.4"
parking_lot = "0.12"
rand = "0.8"

# Redis libraries
# The versions of these two packages are tied togeather, don't change one without 
# making sure the pool is using the same redis version
redis = { version = "0.26", features = ["tokio-native-tls-comp", "connection-manager", "keep-alive", "tls"] }
deadpool-redis = { version = "0.16.0", features = ["serde"] }

[dev-dependencies]
env_logger = "0.11"