[package]
name = "redis-objects"
version = "2.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cybercentreCanada/assemblyline-rust"
homepage = "https://www.cyber.gc.ca/en/tools-services/assemblyline"
description = """Object oriented wrapper around redis client for the Assemblyline malware analysis platform."""

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"

# General system utilities
log = "0.4"
chrono = "0.4"
parking_lot = "0.12"
rand = "0.10"
tracing = "0.1"
thiserror = "2.0"

# Redis libraries
# The versions of these two packages are tied togeather, don't change one without
# making sure redis supports the pool version
redis = { version = "1.2", features = ["tokio-native-tls-comp", "bb8"]}
bb8 = "0.9"

[dev-dependencies]
env_logger = "0.11"